--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
     - name: Clippy
-      run: cargo clippy --tests --all-features -- -D warnings
+      run: cargo clippy --tests --all-features --manifest-path broken_url_finder
     - name: Build
       run: cargo build --verbose
     - name: Format
