--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toolchain:
-          - stable
-          - beta
-          - nightly
           
     steps:
     - uses: actions/checkout@v2
-    - name: Rust Checks
-    - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
     - name: Clippy
-    - run: cargo clippy --all-features --manifest-path broken_url_finder
+      run: cargo clippy --all-features --manifest-path broken_url_finder
     - name: Build
       run: cargo build --verbose
     - name: Format
