--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+          - beta
+          - nightly
           
     steps:
-    - uses: actions/checkout@v2
-    - name: Clippy
-      run: cargo clippy --all-features
-    - name: Build
-      run: cargo build --verbose
-    - name: Format
-      run: cargo fmt
-    - name: Run tests
-      run: cargo test --verbose
+     - uses: actions/checkout@v3
+     - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+     - name: Build
+       run: cargo build --verbose
+     - name: Run tests
+       run: cargo test --verbose
