--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "SomeChanges" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "SomeChanges" ]
 
 env:
   CARGO_TERM_COLOR: always
