Changing the working directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,11 @@ jobs:
           - stable
           - beta
           - nightly
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./broken_url_finder
           
     steps:
      - uses: actions/checkout@v3
