--- a/broken_url_finder/Cargo.toml
+++ b/broken_url_finder/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.0", features = ["cargo"] }
 regex = "1.5"
 reqwest = { version = "0.11", features = ["blocking"] }
