--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,9 @@ jobs:
     steps:
      - uses: actions/checkout@v3
      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-     - name: Build
-       run: cargo build --verbose
+     - name: Check fmt
+       run: cargo fmt --check
+     - name: Clippy
+       run: cargo clippy
      - name: Run tests
        run: cargo test --verbose
