--- a/broken_url_finder/Cargo.toml
+++ b/broken_url_finder/Cargo.toml
@@ -10,3 +10,13 @@ about = "This program accepts a path to a directory and recursively searches thr
 clap = { version = "4.5.0", features = ["derive"] }
 regex = "1.5"
 reqwest = { version = "0.11", features = ["blocking"] }
+tokio = {version = "1.17", features = ["full"]}
+futures = "0.3"
+async-recursion = "1.1.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "reading_benchmark"
+harness = false
